--- a/style.css
+++ b/style.css
@@ -107,12 +107,13 @@ ul{
 	letter-spacing: 3px;
     color:#3D3D4A;
     text-transform: uppercase;
-}.m-text h1{
+}
+.m-text h1{
     letter-spacing:28px;
 }
 .m-text h1 font,
 .m-text h2 font{
-    color:#7A72FF;
+  color:#7A72FF;
 }
 .m-btn{
 	width:150px;
